--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -8,10 +8,23 @@
 /* tablets */
 @media (max-width: 991.98px) {
   body {
-    font-size: 0.9em;
+    font-size: 0.8em;
   }
   .container {
     margin: 0 8%;
+  }
+
+  .hero .flex {
+    flex-direction: column;
+  }
+
+  .hero {
+    .heading {
+      width: 100%;
+    }
+    img {
+      width: 100%;
+    }
   }
 }
 
@@ -22,5 +35,32 @@
   }
   .container {
     margin: 0 4%;
+  }
+
+  header {
+    padding: 0.8em 0;
+
+    .navigation {
+      flex-direction: column;
+    }
+
+    nav {
+      padding: 0.3em 0;
+      ul li {
+        padding-left: 1em;
+      }
+    }
+  }
+
+  footer {
+    nav .flex {
+      flex-direction: column;
+    }
+
+    .social {
+      a {
+        padding: 0.5em 0.3em;
+      }
+    }
   }
 }
