--- a/sass/_utils.scss
+++ b/sass/_utils.scss
@@ -33,12 +33,12 @@
 // button
 .btn {
   display: inline-block;
-  padding: 1em 1em;
+  padding: 0.7em 1.8em;
   cursor: pointer;
   background: $primary-color;
   color: $light-color;
   border: none;
-  border-radius: 0.5em;
+  border-radius: 0.3em;
   font-size: 1em;
   transition: 0.6s;
 
